<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.raspberry.controller.MainActivity" >

    <ListView
        android:id="@+id/list_shower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_connect"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </ListView>

    <Button
        android:id="@+id/button_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_down" />

    <Button
        android:id="@+id/button_brake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_down"
        android:layout_alignLeft="@+id/button_down"
        android:text="@string/btn_brake" />

    <Button
        android:id="@+id/button_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_brake"
        android:layout_alignLeft="@+id/button_brake"
        android:text="@string/btn_up" />

    <Button
        android:id="@+id/button_sup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_down"
        android:layout_alignBottom="@+id/button_down"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_sup" />

    <Button
        android:id="@+id/button_sdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_sdown" />

    <Button
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_sup"
        android:layout_alignRight="@+id/button_sup"
        android:text="@string/btn_left" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_sdown"
        android:layout_below="@+id/button_up"
        android:text="@string/btn_right" />

    <Button
        android:id="@+id/button_tleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_left"
        android:layout_alignLeft="@+id/button_left"
        android:text="@string/btn_tleft" />

    <Button
        android:id="@+id/button_tright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_up"
        android:layout_alignLeft="@+id/button_right"
        android:text="@string/btn_tright" />

    <Button
        android:id="@+id/button_fire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_up"
        android:layout_alignLeft="@+id/button_up"
        android:text="@string/btn_fire" />

    <Button
        android:id="@+id/button_telev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_fire"
        android:layout_alignLeft="@+id/button_tleft"
        android:text="@string/btn_telev" />

    <EditText
        android:id="@+id/edit_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_fire"
        android:layout_alignLeft="@+id/button_telev"
        android:layout_toLeftOf="@+id/button_connect"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/button_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_tright"
        android:layout_alignRight="@+id/button_tright"
        android:text="Button" />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_addr"
        android:layout_alignBottom="@+id/edit_addr"
        android:layout_alignLeft="@+id/button_auto"
        android:text="@string/btn_connect" />

</RelativeLayout>